Fixed layout bug

--- a/temp-interface/src/Status.css
+++ b/temp-interface/src/Status.css
@@ -5,7 +5,7 @@
 
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-template-rows: auto;
   grid-gap: 10px;
   padding: 40px 10px 10px 10px;
@@ -37,8 +37,4 @@
 
 .box5 {
   background-color: #612910;
-}
-
-.legend {
-  height:auto;
 }
